--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -18,31 +17,18 @@
             <div class="row justify-content-md-center">
                 <div class="col-md-8" >
                     <span class="labelMensaje"> Seleccionamos un cap&iacute;tulo especial para ti! </br> Pero si prefieres selecciona otro ;)</span>
-                    <form style="margin-top:35px" action="<?php $_SERVER["PHP_SELF"]; ?>" method="POST" >
+                    <form style="margin-top:35px" method="POST" >
                         <div class="row justify-content-md-center ">
                             <div class="col-11">
                                 <div class="row justify-content-md-center">
-                                    <?php
-                                        if (isset($_SESSION['temporada'])){
-                                    ?>
-                                        <span class="labelTemp">Temporada: <b><?php echo $_SESSION['temporada']; ?></b> - cap&iacute;tulo: <b><?php echo $_SESSION['capitulo']; ?> </b> </span>
-                                    <?php
-                                        }
-                                    ?>
+                                        <span class="labelTemp">Temporada: <b>1</b> - cap&iacute;tulo: <b> El que sea </b> </span>
                                 </div>
                             </div>
                         </div>
                         <div class="row justify-content-md-center">
                             <div class="col-12">
                                 <div class="row justify-content-md-center">
-                                    <?php
-                                        if (isset($_SESSION['temporada'])){
-                                    ?>
-                                        
-                                        <span class="labelTit"><b>"<?php echo $_SESSION['titulo']; ?>" </b></span>
-                                    <?php
-                                        }
-                                    ?>
+                                    <span class="labelTit"><b>Los Simpsons</b></span>
                                 </div>
                             </div>
                         </div>
@@ -50,13 +36,7 @@
                         <div class="row justify-content-md-center">
                             <div class="col-11">
                                 <div class="row justify-content-md-center">
-                                    <?php
-                                        if (isset($_SESSION['temporada'])){
-                                    ?>
-                                        <span class="labelLink"><a href="<?php echo $_SESSION['link']; ?>" target="_blank"><b>Ver en Star+ </b> </a></span>
-                                    <?php
-                                        }
-                                    ?>
+                                    <span class="labelLink"><a href="https://www.starplus.com/es-419/series/los-simpson/3ZoBZ52QHb4x" target="_blank"><b>Ver en Star+ </b> </a></span>
                                 </div>
                             </div>
                         </div>
