--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="css/styles.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e3d7c25997.js" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cap&iacute;tulos random</title>
@@ -16,19 +17,26 @@
             <img src="img/tittle.png" class="imgTop"/>
             <div class="row justify-content-md-center">
                 <div class="col-md-8" >
-                    <span class="labelMensaje"> Seleccionamos un cap&iacute;tulo especial para ti! </br> Pero si prefieres selecciona otro ;)</span>
-                    <form style="margin-top:35px" method="POST" >
+                    <span class="labelMensaje"> Pulsa para seleccionar un cap&iacute;tulo aleatorio ;)</span>
+                    <!--<form style="margin-top:35px" method="POST" > -->
                         <div class="row justify-content-md-center ">
                             <div class="col-11">
-                                <div class="row justify-content-md-center">
-                                        <span class="labelTemp">Temporada: <b>1</b> - cap&iacute;tulo: <b> El que sea </b> </span>
+                                <div class="row justify-content-md-center" style="margin-top: 15px;">
+                                        <span class="labelTemp" id="temporadadesc"></span>
+                                        <b>
+                                            <span class="labelTemp" id="temporada" style="margin-left: 5px; margin-right: 5px;"></span>
+                                        </b>
+                                        <span class="labelTemp" id="capitulodesc"></span>
+                                        <b> 
+                                            <span class="labelTemp" id="capitulo" style="margin-left: 5px;"> </span>
+                                        </b>
                                 </div>
                             </div>
                         </div>
                         <div class="row justify-content-md-center">
                             <div class="col-12">
                                 <div class="row justify-content-md-center">
-                                    <span class="labelTit"><b>Los Simpsons</b></span>
+                                    <span class="labelTit"><b><span class="labelTemp" id="titulo"></span></b></span>
                                 </div>
                             </div>
                         </div>
@@ -36,17 +44,17 @@
                         <div class="row justify-content-md-center">
                             <div class="col-11">
                                 <div class="row justify-content-md-center">
-                                    <span class="labelLink"><a href="https://www.starplus.com/es-419/series/los-simpson/3ZoBZ52QHb4x" target="_blank"><b>Ver en Star+ </b> </a></span>
+                                    <span class="labelLink"><a class="linkstar" id="link" href="http://www.google.com" target="_blank"><b>Ver en Star+ </b> </a></span>
                                 </div>
                             </div>
                         </div>
                         <br>
                         <div class="row justify-content-md-center">
                             <div class="col-11">
-                                <button type="submit" class="btn btnCap" name="guardar">Nuevo cap&iacute;tulo</button>
+                                <button type="submit" id="load_data" class="btn btnCap" name="load_data">Nuevo cap&iacute;tulo</button>
                             </div>
                         </div>
-                    </form>
+                    <!-- </form>-->
                 </div>
             </div>
             <img src="img/sillon.png" class="imgBottom"/>
@@ -57,5 +65,46 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </body>
 </html>
+<script>
+            $(document).ready(function(){
+                $('#load_data').click(function(){
+                    $.ajax({
+                    url:"csv/dbcapitulos.csv",
+                    dataType:"text",
+                        success:function(data)
+                        {
+                            function getRandomInt(max) {
+                                return Math.floor(Math.random() * max);
+                            }
+
+                            var employee_data = data.split(/\r?\n|\r/);
+                            var table_data = '<table class="table table-bordered table-striped">';
+                            var capitulo = getRandomInt(707);
+
+                            var fila = employee_data[capitulo].split("|");
+
+                            for(var celda = 0; celda < fila.length; celda++)
+                            {
+                                document.getElementById("temporadadesc").innerHTML = "Temporada: ";
+                                document.getElementById("capitulodesc").innerHTML = "- cap&iacute;tulo: ";
+                                document.getElementById("temporada").innerHTML = " " + fila[0] + " ";
+                                document.getElementById("capitulo").innerHTML = " " + fila[1] + " ";
+                                document.getElementById("titulo").innerHTML = fila[2];
+                                document.getElementById("link").href = fila[3];
+                                //document.getElementById("link").innerHTML = fila[3];
+                                /*var theLinks = document.querySelectorAll('#link a');
+                                theLinks.forEach(function (element, index) {
+                                    element.href = fila[3];
+                                });
+                                */
+                                //table_data += '<td>'+fila[celda]+'</td>';
+                            }
+                        }
+                    });
+                });
+            });
+
+    </script>
